Changes for maven central deployment